# IP_lab

./: CMakeLists.txt
exam/: task1.c  task2.c  task3.c
lab1/: sum_N.c  vec-template.c
lab10/: vect_template.c
lab11/: list_template.c
lab12/: dll_template.c
lab13/: ht_template.c
lab2/: perm_template.c  stack_template.c
lab3/: stat_template.c
lab4/: ids_template.c  ids_zajebane.c  str_template.c
lab5/: mat_template.c
lab6/: int_template.c
lab7/: rel_template.c
lab8/: mat_template.c
lab9/: sort_template.c
mock exam/: task1.c  task2.c
